Table filter (#162)
* use TableFilter on heats and races table

* mouse events

* consume events

* cleanup code