@@ -84,6 +84,9 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <configuration>
           <mainClass>${mainClass}</mainClass>
+          <options>
+            <option>--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+          </options>
         </configuration>
       </plugin>
 
